adds-custom-check

--- a/index.html
+++ b/index.html
@@ -406,13 +406,15 @@
             ></textarea>
           </div>
           <div class="form-check">
-            <input type="checkbox" name="checkbox" id="checkbox" />
+                      
             <label for="checkbox" class="checkbox-label"
-              >Соглашаюсь с рассылкой и принимаю
+              ><input class="check-input" type="checkbox" name="checkbox" id="checkbox" />
+              <span class="check-icon"></span>
+              Соглашаюсь с рассылкой и принимаю
               <a href="http://" target="_blank" rel="noopener noreferrer"
                 >Условия договора</a
-              ></label
-            >
+              ></label>
+              
           </div>
           <button class="sub-btn" type="submit">Отправить</button>
         </form>
