adds-footer-input

--- a/index.html
+++ b/index.html
@@ -362,6 +362,13 @@
             </li>
           </ul>
         </div>
+        <div class="input-block">
+          <strong class="call-text">Подпишитесь на рассылку</strong>
+          <form class="footer-form">
+            <input type="text" name="mail" class="footer-input" placeholder="E-mail">
+            <button class="footer-btn" type="submit">Подписаться<span class="btn-icon"></span></button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
