fixed-for-validator

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <ul class="advantages-list list">
             <li class="item">
               <div class="thumb">
-                <svg class="icon" widht="70px" height="70px">
+                <svg class="icon" width="70px" height="70px">
                   <use href="./images/svg/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -78,7 +78,7 @@
             </li>
             <li class="item">
               <div class="thumb">
-                <svg class="icon" widht="70px" height="70px">
+                <svg class="icon" width="70px" height="70px">
                   <use href="./images/svg/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -89,7 +89,7 @@
             </li>
             <li class="item">
               <div class="thumb">
-                <svg class="icon" widht="70px" height="70px">
+                <svg class="icon" width="70px" height="70px">
                   <use href="./images/svg/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -100,7 +100,7 @@
             </li>
             <li class="item">
               <div class="thumb">
-                <svg class="icon" widht="70px" height="70px">
+                <svg class="icon" width="70px" height="70px">
                   <use href="./images/svg/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -277,37 +277,37 @@
           <h2 class="clients-title title">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="item">
-              <a class="link" href="http://"
+              <a class="link" href="./"
                 ><svg class="icon" width="41px" height="46.7px">
                   <use href="./images/svg/icons.svg#icon-Logo1"></use></svg
               ></a>
             </li>
             <li class="item">
-              <a class="link" href="http://"
+              <a class="link" href="./"
                 ><svg class="icon" width="40px" height="52px">
                   <use href="./images/svg/icons.svg#icon-Logo2"></use></svg
               ></a>
             </li>
             <li class="item">
-              <a class="link" href="http://"
+              <a class="link" href="./"
                 ><svg class="icon" width="43.46px" height="41.18px">
                   <use href="./images/svg/icons.svg#icon-Logo3"></use></svg
               ></a>
             </li>
             <li class="item">
-              <a class="link" href="http://"
+              <a class="link" href="./"
                 ><svg class="icon" width="84.44px" height="40.62px">
                   <use href="./images/svg/icons.svg#icon-Logo4"></use></svg
               ></a>
             </li>
             <li class="item">
-              <a class="link" href="http://"
+              <a class="link" href="./"
                 ><svg class="icon" width="62.54px" height="45.43px">
                   <use href="./images/svg/icons.svg#icon-Logo5"></use></svg
               ></a>
             </li>
             <li class="item">
-              <a class="link" href="http://"
+              <a class="link" href="./"
                 ><svg class="icon" width="93.79px" height="43.93px">
                   <use href="./images/svg/icons.svg#icon-Logo6"></use></svg
               ></a>
@@ -418,7 +418,7 @@
               ><input class="check-input" type="checkbox" name="checkbox" id="checkbox" />
               <span class="check-icon"></span>
               Соглашаюсь с рассылкой и принимаю
-              <a href="http://" target="_blank" rel="noopener noreferrer"
+              <a href="./" target="_blank" rel="noopener noreferrer"
                 >Условия договора</a
               ></label>
               
